Undo: Clear more ID runtime data on filewrite.

This should help reducing false 'changed' status detection when reading
back a memfile undo step.

Related to T90593 & D12242.